language/move-lang/tests/move_check/parser/less_than_space.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/less_than_space.move:5:18
  │
5 │         if (v< 10) return v;
  │              - --^ Unexpected ')'
  │              │ │  
  │              │ Expected '::' after an address in a module access chain
  │              Perhaps you need a blank space before this '<' operator?

